--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <!-- Pixel Code for https://www.widgetsquad.com/ -->
+    <script async src="https://www.widgetsquad.com/pixel/i9kxf5hp6t28y26t0czla6d9b2qmr0t0"></script>
+     <!-- END Pixel Code -->
 
 </head>
 <body>
