--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Pixel Code for https://www.widgetsquad.com/ -->
     <script async src="https://www.widgetsquad.com/pixel/i9kxf5hp6t28y26t0czla6d9b2qmr0t0"></script>
      <!-- END Pixel Code -->
+     <a href='https://www.free-counters.org/'>powered by Free-Counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=1201ef82b382ba6880fd6adbcfe4c6a564acf2fa'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1195889/t/4"></script>
 
    
 
