--- a/index.html
+++ b/index.html
@@ -399,7 +399,9 @@
         <p>copyright &copy; 2024 by maniranjan || All right are reserved </p>
         <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
       </footer>
-        
+         <div class="nk">  <script type="text/javascript" src="https://www.free-counters.org/count/frnj"></script><br>
+        <a href='https://www.free-counters.org/' id="nk">powered by Free-Counters.org</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=faaf4af702b9bc21e2d62a9f1dd8719b5b302283'></script>
+       </div>
   
      
       <script src="mixitup.min.js"></script>
