--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@
         <p>copyright &copy; 2024 by maniranjan || All right are reserved </p>
         <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
       </footer>
-         <div class="nk">  <script type="text/javascript" src="https://www.free-counters.org/count/frnj"></script><br>
-        <a href='https://www.free-counters.org/' id="nk">powered by Free-Counters.org</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=faaf4af702b9bc21e2d62a9f1dd8719b5b302283'></script>
+         <div class="nk">   <a href='https://www.free-counters.org/'>powered by Free-Counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=51436acd144f3693a62b8c8142f2cfa28dcf2eb5'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1195898/t/6"></script>
        </div>
   
      
