--- a/index.html
+++ b/index.html
@@ -300,12 +300,13 @@
                 <div class="port-box mix AI-ML">
                     <div class="port-image">
                         <img src="7.jpg" alt="">
+                        
                     </div>
 
                     <div class="port-content">
                         <h3>Hotel's Booking-EDA</h3>
                         <p>Uncover insights into booking patterns, customer preferences, and seasonal trends. Optimize pricing, enhance marketing strategies, and improve customer satisfaction with data-driven decisions.</p>
-                        <a href=""><i class='bx bx-link-external'></i></a>
+                        <a href="https://colab.research.google.com/drive/1_-dekyZe_JIsBe2uMjF3hEG7N_3XQVY2?usp=sharing"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
 
@@ -364,7 +365,7 @@
                     <div class="port-content">
                         <h3>Calculater</h3>
                         <p>JavaScript calculator: Enables user input for arithmetic operations (+, -, *, /) and updates the display dynamically with computed results using event handling. </p>
-                        <a href=""><i class='bx bx-link-external'></i></a>
+                        <a href="https://maniranjan2023.github.io/calculator1/"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
             </div>
