--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1195901/t/7"></script>
        </div>
 
-      <iframe src="https://free.timeanddate.com/clock/i9gbo5uw/n1040/fs19/fcff9/tc090/pcf90/ftbi/bas2/bat1/bacfff/pa8/tt0/tw1/th1/ta1/tb4" frameborder="0" width="248" height="64"></iframe>
+      <iframe src="https://free.timeanddate.com/clock/i9gbo5uw/n1040/fs19/fcff9/tc090/pcf90/ftbi/bas2/bat1/bacfff/pa8/tt0/tw1/th1/ta1/tb4" frameborder="0" width="248" height="64" id="clock"></iframe>
 
 
   
