--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <script async src="https://www.widgetsquad.com/pixel/i9kxf5hp6t28y26t0czla6d9b2qmr0t0"></script>
      <!-- END Pixel Code -->
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0RRWZQBLYV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0RRWZQBLYV');
+</script>
+
   
    
 
