--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 </head>
 <body>
 
+     <div id="page">
+      <div id="container">
+          <div id="ring"></div>
+          <div id="ring"></div>
+          <div id="ring"></div>
+          <div id="ring"></div>
+          <div id="h3">Loading</div>
+      </div>
+  </div>
+
     
    
    
