--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
 </head>
 <body>
 
+
+    /* From Uiverse.io by Vazafirst */ 
+<div id="page">
+        <div id="container">
+            <div id="ring"></div>
+            <div id="ring"></div>
+            <div id="ring"></div>
+            <div id="ring"></div>
+            <div id="h3">loading</div>
+        </div>
+</div>
+
    
 
     
